# rust-perl

./: .gitignore  Cargo.toml  main.pl
ffi/: Cargo.toml
ffi/ffi_utils/: Cargo.toml
ffi/ffi_utils/src/: lib.rs
ffi/src/: lib.rs
lib/: FastDecimate.pm  Person.pm
src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
