[package]
name = "person"
version = "0.1.0"
authors = ["amin roost <amin.roosta@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
utils = { path = "utils" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
redis = "0.17.0"

[profile.release]
lto = true
codegen-units = 1
# debug = true
opt-level = 3
